--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -3,6 +3,14 @@ body{
     padding: 0;
     font-family: 'Balsamiq Sans', cursive;
 }
+
+.navbar {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 .jumbotron {
     background-image: url("/imgs/lead1.jpg");
     padding: 70px 0;
