--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -11,6 +11,22 @@ body{
     width: 100%;
 }
 
+.landing{
+    background-image: url("/imgs/lead1.jpg");
+    padding: 70px 0;
+    background-repeat: no-repeat;
+}
+
+.landing h1, .landing h4{
+    opacity: 60%;
+    text-align: center;
+    background-color: black;
+    color: white;
+    width: 100%;
+    background-size: cover;
+    margin: 0;
+}
+
 .jumbotron {
     background-image: url("/imgs/lead1.jpg");
     padding: 70px 0;
